# Anya

./: .dockerignore  .gitignore  .opencode.json  AGENTS.md  AICONTEXT-PYLIB.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  agent-control.toml  compose.yml  config.example.toml  env.example  pyproject.toml
.claude/skills/docker-compose-deploy/: SKILL.md
.claude/skills/onya-graph/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/python-prompting/: SKILL.md
.claude/skills/testing/: SKILL.md
doc/: DEPLOYMENT.md
job/: README.md
job/example/: MAIN.md  anya.loom.toml  anya.toml  controller.py  fetch.py
job/random-reminders/: MAIN.md  candidates.txt  random_fetch.py
pylib/anya/: __init__.py  actions.py  blotter.py  config.py  email_unosend.py  executor.py  inference.py  memory.py  prompts.py  runner.py
pylib/anya/cli/: main.py
pylib/anya/email/: __init__.py  resend.py  unosend.py
pylib/anya/fetchers/: __init__.py  _cache.py  http.py  protocol.py  reddit.py  rss.py  search.py
pylib/anya/job/: __init__.py  loader.py
pylib/anya/llm/: __init__.py
pylib/anya/scheduler/: __init__.py  apscheduler_impl.py  asyncio_loop.py  base.py
test/: test_config.py  test_executor.py  test_inference.py  test_job_loader.py  test_search.py
