[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'anya'
dynamic = ['version']
description = 'Headless LLM agent runner: scheduled jobs, skills/flows, email reports, blotter (Claude, OpenAI-compatible)'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'anthropic>=0.50',
    'filelock>=3.15',
    'openai>=1.0',
    'httpx>=0.28',
    'hishel[httpx]>=1.2',  # RFC 9111 HTTP cache for httpx (ETag / Last-Modified / Cache-Control)
    'structlog>=24.0',
    'tenacity>=9.0',
    'fire>=0.7',
    'rich>=13.0',
    'python-dotenv>=1.0',
    'feedparser>=6.0',
    'cssutils',  # Used by ogbujipt.text.html for CSS parsing
    # Lightweight HTML→Markdown profile (clean_html, html2markdown) — pinned to git main
    # until released; the PyPI build dragged in torch/transformers/tiktoken (multi-GB).
    'ogbujipt @ git+https://github.com/OoriData/OgbujiPT.git@main',
    'selectolax',  # Required by ogbujipt.text.html
    'wordloom>=0.10.1',  # Prompts file format (anya.loom.toml)
]

[project.optional-dependencies]
scheduler-apscheduler = ['apscheduler>=3.10']
scheduler-cron = ['python-crontab>=3.0']
scheduler-schedule = ['schedule>=2.0']
imap = ['aiosmtplib>=3.0']
all = [
    'anya[scheduler-apscheduler,scheduler-cron,scheduler-schedule,imap]',
]

[project.scripts]
anya = 'anya.cli.main:main'

# Allow the git-pinned ogbujipt direct reference until it's released to PyPI.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = 'pylib/anya/__about__.py'

[tool.hatch.build.targets.wheel]
packages = ['pylib/anya']

[tool.hatch.build.sources]
'pylib/anya' = 'anya'
